objects/Lead.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <businessProcesses>
        <fullName>Senior Living</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Skilled Nursing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent message containing the XML payload used to create or update this lead</description>
        <label>Message</label>
        <referenceTo>Message__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <formula>if (UPPER(TEXT( Relationship_to_Prospect__c )) = &apos;SELF&apos;,true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Form__c</fullName>
        <label>Web Form</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <label>Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Classified</fullName>
                    <default>true</default>
                    <label>Not Yet Classified</label>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoConvert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoConvert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lost_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ref_Org_Code__c</fullName>
        <label>Ref Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_term__c</fullName>
        <label>Form utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Living__c</fullName>
        <formula>IF(RecordType.Name = &apos;Senior Living&apos; , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Senior Living</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Community__c</fullName>
        <label>Form Community</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_medium__c</fullName>
        <label>Form utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_source__c</fullName>
        <label>Form utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skilled_Nursing__c</fullName>
        <formula>IF($RecordType.Name = &quot;Skilled Nursing&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skilled Nursing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Floater__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Floater</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_utm_content__c</fullName>
        <label>Form utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Merge to Contact)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Landing_Page__c</fullName>
        <label>Form Landing Page</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_utm_campaign__c</fullName>
        <label>Form utm campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Opportunity__c</fullName>
        <formula>IF( TEXT(Preferred_Housing_Type__c) = &apos;SNF&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Last_Referrer__c</fullName>
        <label>Form Last Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Last_Name__c</fullName>
        <label>Prospect Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_First_Referrer__c</fullName>
        <label>Form First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_First_Name__c</fullName>
        <label>Prospect First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Source_Code__c</fullName>
        <label>External Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Submission_Date__c</fullName>
        <label>Form Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internet_Lead_Source__c</fullName>
        <label>Internet Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Activity_Type__c</fullName>
        <label>Initial Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Call In</fullName>
                </value>
                <value>
                    <fullName>Initial Email In</fullName>
                </value>
                <value>
                    <fullName>Initial Mail In</fullName>
                </value>
                <value>
                    <fullName>Initial Walk In</fullName>
                </value>
                <value>
                    <fullName>Initial Walk In Appointment</fullName>
                </value>
                <value>
                    <fullName>Initial Call Out</fullName>
                </value>
                <value>
                    <fullName>Initial Email Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eReferral_Facility_Id__c</fullName>
        <description>The receiving facility name.</description>
        <label>eReferral Facility Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_New_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Activity_Notes__c</fullName>
        <label>Initial Activity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Housing_Type__c</fullName>
        <label>Preferred Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Housing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addl_Prospect_Last_Name__c</fullName>
        <label>Addl Prospect Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Activity_Date__c</fullName>
        <label>Follow Up Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Activity_Type__c</fullName>
        <label>Follow Up Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Call In</fullName>
                </value>
                <value>
                    <fullName>Call Out</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Closing Appointment</fullName>
                </value>
                <value>
                    <fullName>Community Experience</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Email In</fullName>
                </value>
                <value>
                    <fullName>Email Out</fullName>
                </value>
                <value>
                    <fullName>Home Visit</fullName>
                </value>
                <value>
                    <fullName>Initial Appointment</fullName>
                </value>
                <value>
                    <fullName>Initial Call In</fullName>
                </value>
                <value>
                    <fullName>Initial Email In</fullName>
                </value>
                <value>
                    <fullName>Initial Mail In</fullName>
                </value>
                <value>
                    <fullName>Initial Walk In</fullName>
                </value>
                <value>
                    <fullName>Initial Walk In Appointment</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Mail In</fullName>
                </value>
                <value>
                    <fullName>Mail Out - Personal Mail</fullName>
                </value>
                <value>
                    <fullName>Move In</fullName>
                </value>
                <value>
                    <fullName>Move Out</fullName>
                </value>
                <value>
                    <fullName>Post-Deposit Appointment</fullName>
                </value>
                <value>
                    <fullName>Resident Appointment</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Requested_Tour_Date__c</fullName>
        <inlineHelpText>What day was requested for a Tour?</inlineHelpText>
        <label>Web Requested Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addl_Prospect_First_Name__c</fullName>
        <label>Addl Prospect First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Activity_Notes__c</fullName>
        <label>Follow Up Activity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Prospect__c</fullName>
        <label>Relationship to Prospect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_to_Prospect</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_ReInquiry_to_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add ReInquiry to Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Activity_Result_Code__c</fullName>
        <label>Initial Activity Result Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled Appointment</fullName>
                </value>
                <value>
                    <fullName>Cancelled FRP Deposit</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>EBD Referral</fullName>
                </value>
                <value>
                    <fullName>Follow Up Scheduled</fullName>
                </value>
                <value>
                    <fullName>FRP Deposit</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Move-in Coor. Appointment</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>No Tour Given</fullName>
                </value>
                <value>
                    <fullName>Out of Service</fullName>
                </value>
                <value>
                    <fullName>Remove from List</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>RSVP</fullName>
                </value>
                <value>
                    <fullName>Scheduled Appointment</fullName>
                </value>
                <value>
                    <fullName>Temp Disconnected</fullName>
                </value>
                <value>
                    <fullName>Tour Booked</fullName>
                </value>
                <value>
                    <fullName>Tour Given</fullName>
                </value>
                <value>
                    <fullName>Tour Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>AL Deposit</fullName>
                    <isActive>false</isActive>
                    <label>AL Deposit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Form_Submission_Community__c</fullName>
        <label>Last Form Submission Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Requested_Tour_Time_of_Day__c</fullName>
        <inlineHelpText>What time of day was requested for a Tour?</inlineHelpText>
        <label>Web Requested Tour Time of Day</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_Household_of_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add to Household of Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads (Add to Household of Opportunity)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Not_Opened_After_Conversion_Yet__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Not Opened After Conversion Yet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Prospect_Filter__c</fullName>
        <formula>&apos;No Filter&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship to Prospect Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Original_Owner_as_Floater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Original Owner as Floater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navihealth_eReferral_External_Id__c</fullName>
        <label>Navihealth eReferral External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navihealth_eReferral_Facility_Id__c</fullName>
        <label>Navihealth eReferral Facility Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Activity_Subject_Optional__c</fullName>
        <label>Initial Activity Subject (Optional)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Senior_Living</fullName>
        <active>true</active>
        <businessProcess>Senior Living</businessProcess>
        <label>Senior Living</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skilled_Nursing</fullName>
        <active>true</active>
        <businessProcess>Skilled Nursing</businessProcess>
        <label>Skilled Nursing</label>
    </recordTypes>
    <validationRules>
        <fullName>Require_Referring_Cont_if_Ref_Acct_Slctd</fullName>
        <active>false</active>
        <description>Deactivated this rule while creating the package for Kindal, otherwise this should be active.</description>
        <errorConditionFormula>If (ISBLANK(HealthCloudGA__ReferringOrganization__c  ), false, 
   if (ISBLANK(HealthCloudGA__ReferringPractitioner__c), true, false )
)</errorConditionFormula>
        <errorDisplayField>HealthCloudGA__ReferringPractitioner__c</errorDisplayField>
        <errorMessage>You have selected a Referring Organization. You must also select a Referring Practitioner/Contact.</errorMessage>
    </validationRules>
</CustomObject>